HWTomcatServer/webapps/ROOT/WEB-INF/classes/Hackscript/CParser.java
// $ANTLR 3.0.1 /Users/benjamincoe/HackWars/C.g 2009-01-01 16:21:19

package Hackscript;
import Hackscript.Model.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class CParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "WHILE_STATEMENT", "FOR_STATEMENT", "FUNCTION", "IFPART", "ELSEPART", "THEN", "ELSE", "DECLARATION", "PROCEDURE", "PROCEDURE_PARAMETERS", "POWER_EXPRESSION", "SIGN_EXPRESSION", "PROGRAM", "ARRAY_IDENTIFIER", "ARRAY_DECLARE", "CAST_EXPRESSION", "WHILE", "LPAREN", "RPAREN", "SBLEFT", "SBRIGHT", "FOR", "SEMICOLON", "IDENTIFIER", "COMMA", "IF", "PLUS", "MINUS", "NOT", "INCREMENT", "DECREMENT", "POWER", "TIMES", "DIV", "MOD", "GTE", "EQUALS", "NOT_EQUALS", "GT", "LT", "LTE", "AND", "OR", "STRING_LITERAL", "INTEGER_LITERAL", "DOUBLE", "BOOLEAN_LITERAL", "LBRACKET", "RBRACKET", "FLOAT_TYPE", "STRING_TYPE", "INTEGER_TYPE", "BOOLEAN_TYPE", "VOID_TYPE", "ARRAY_TYPE", "BECOMES", "MULTIPLY_ASSIGN", "INCREMENT_ASSIGN", "DECREMENT_ASSIGN", "WHITE_SPACE", "COMMENT", "ML_COMMENT", "NEWLINE"
    };
    public static final int COMMA=28;
    public static final int STRING_TYPE=54;
    public static final int MINUS=31;
    public static final int SIGN_EXPRESSION=15;
    public static final int DOUBLE=49;
    public static final int INCREMENT_ASSIGN=61;
    public static final int ELSEPART=8;
    public static final int PROCEDURE=12;
    public static final int BOOLEAN_LITERAL=50;
    public static final int THEN=9;
    public static final int LBRACKET=51;
    public static final int INCREMENT=33;
    public static final int INTEGER_TYPE=55;
    public static final int MOD=38;
    public static final int BECOMES=59;
    public static final int VOID_TYPE=57;
    public static final int OR=46;
    public static final int PROGRAM=16;
    public static final int NEWLINE=66;
    public static final int PROCEDURE_PARAMETERS=13;
    public static final int NOT_EQUALS=41;
    public static final int AND=45;
    public static final int DECLARATION=11;
    public static final int CAST_EXPRESSION=19;
    public static final int FUNCTION=6;
    public static final int GTE=39;
    public static final int STRING_LITERAL=47;
    public static final int RBRACKET=52;
    public static final int RPAREN=22;
    public static final int LPAREN=21;
    public static final int WHITE_SPACE=63;
    public static final int ML_COMMENT=65;
    public static final int PLUS=30;
    public static final int SBRIGHT=24;
    public static final int INTEGER_LITERAL=48;
    public static final int WHILE_STATEMENT=4;
    public static final int DECREMENT=34;
    public static final int TIMES=36;
    public static final int ARRAY_DECLARE=18;
    public static final int ARRAY_TYPE=58;
    public static final int DECREMENT_ASSIGN=62;
    public static final int WHILE=20;
    public static final int POWER=35;
    public static final int BOOLEAN_TYPE=56;
    public static final int LT=43;
    public static final int GT=42;
    public static final int COMMENT=64;
    public static final int MULTIPLY_ASSIGN=60;
    public static final int POWER_EXPRESSION=14;
    public static final int FLOAT_TYPE=53;
    public static final int FOR_STATEMENT=5;
    public static final int SBLEFT=23;
    public static final int LTE=44;
    public static final int EQUALS=40;
    public static final int ELSE=10;
    public static final int SEMICOLON=26;
    public static final int IF=29;
    public static final int EOF=-1;
    public static final int FOR=25;
    public static final int ARRAY_IDENTIFIER=17;
    public static final int DIV=37;
    public static final int IFPART=7;
    public static final int IDENTIFIER=27;
    public static final int NOT=32;

	public CParser(TokenStream input,Model MyModel) {
		super(input);
		this.MyModel=MyModel;
	}
		
	private Model MyModel=null;
		
    public void displayRecognitionError(String[] tokenNames,RecognitionException e){
		MyModel.addCompilerError(e);
    }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/Users/benjamincoe/HackWars/C.g"; }


    public static class start_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start start
    // /Users/benjamincoe/HackWars/C.g:36:1: start : main_program EOF ;
    public final start_return start() throws RecognitionException {
        start_return retval = new start_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF2=null;
        main_program_return main_program1 = null;


        Object EOF2_tree=null;

        try {
            // /Users/benjamincoe/HackWars/C.g:36:7: ( main_program EOF )
            // /Users/benjamincoe/HackWars/C.g:36:9: main_program EOF
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_main_program_in_start146);
            main_program1=main_program();
            _fsp--;

            adaptor.addChild(root_0, main_program1.getTree());
            EOF2=(Token)input.LT(1);
            match(input,EOF,FOLLOW_EOF_in_start148); 

            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end start

    public static class main_program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start main_program
    // /Users/benjamincoe/HackWars/C.g:38:1: main_program : ( program ) ( expression main_program )? ;
    public final main_program_return main_program() throws RecognitionException {
        main_program_return retval = new main_program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        program_return program3 = null;

        expression_return expression4 = null;

        main_program_return main_program5 = null;



        try {
            // /Users/benjamincoe/HackWars/C.g:38:14: ( ( program ) ( expression main_program )? )
            // /Users/benjamincoe/HackWars/C.g:38:16: ( program ) ( expression main_program )?
            {
            root_0 = (Object)adaptor.nil();

            // /Users/benjamincoe/HackWars/C.g:38:16: ( program )
            // /Users/benjamincoe/HackWars/C.g:38:17: program
            {
            pushFollow(FOLLOW_program_in_main_program158);
            program3=program();
            _fsp--;

            adaptor.addChild(root_0, program3.getTree());

            }

            // /Users/benjamincoe/HackWars/C.g:38:26: ( expression main_program )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==LPAREN||LA1_0==SBLEFT||LA1_0==IDENTIFIER||(LA1_0>=PLUS && LA1_0<=NOT)||(LA1_0>=STRING_LITERAL && LA1_0<=BOOLEAN_LITERAL)) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // /Users/benjamincoe/HackWars/C.g:38:27: expression main_program
                    {
                    pushFollow(FOLLOW_expression_in_main_program162);
                    expression4=expression();
                    _fsp--;

                    adaptor.addChild(root_0, expression4.getTree());
                    pushFollow(FOLLOW_main_program_in_main_program164);
                    main_program5=main_program();
                    _fsp--;

                    adaptor.addChild(root_0, main_program5.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end main_program

    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start program
    // /Users/benjamincoe/HackWars/C.g:41:1: program : ( allowed_single )* ;
    public final program_return program() throws RecognitionException {
        program_return retval = new program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        allowed_single_return allowed_single6 = null;



        try {
            // /Users/benjamincoe/HackWars/C.g:41:9: ( ( allowed_single )* )
            // /Users/benjamincoe/HackWars/C.g:41:11: ( allowed_single )*
            {
            root_0 = (Object)adaptor.nil();

            // /Users/benjamincoe/HackWars/C.g:41:11: ( allowed_single )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==IDENTIFIER) ) {
                    switch ( input.LA(2) ) {
                    case LPAREN:
                        {
                        switch ( input.LA(3) ) {
                        case LPAREN:
                            {
                            switch ( input.LA(4) ) {
                            case FLOAT_TYPE:
                            case STRING_TYPE:
                            case INTEGER_TYPE:
                            case BOOLEAN_TYPE:
                            case VOID_TYPE:
                            case ARRAY_TYPE:
                                {
                                alt2=1;
                                }
                                break;
                            case LPAREN:
                                {
                                alt2=1;
                                }
                                break;
                            case PLUS:
                            case MINUS:
                            case NOT:
                                {
                                alt2=1;
                                }
                                break;
                            case SBLEFT:
                                {
                                alt2=1;
                                }
                                break;
                            case IDENTIFIER:
                                {
                                alt2=1;
                                }
                                break;
                            case STRING_LITERAL:
                                {
                                alt2=1;
                                }
                                break;
                            case INTEGER_LITERAL:
                                {
                                alt2=1;
                                }
                                break;
                            case DOUBLE:
                                {
                                alt2=1;
                                }
                                break;
                            case BOOLEAN_LITERAL:
                                {
                                alt2=1;
                                }
                                break;

                            }

                            }
                            break;
                        case PLUS:
                        case MINUS:
                        case NOT:
                            {
                            switch ( input.LA(4) ) {
                            case SBLEFT:
                                {
                                alt2=1;
                                }
                                break;
                            case IDENTIFIER:
                                {
                                alt2=1;
                                }
                                break;
                            case STRING_LITERAL:
                                {
                                alt2=1;
                                }
                                break;
                            case INTEGER_LITERAL:
                                {
                                alt2=1;
                                }
                                break;
                            case DOUBLE:
                                {
                                alt2=1;
                                }
                                break;
                            case BOOLEAN_LITERAL:
                                {
                                alt2=1;
                                }
                                break;
                            case LPAREN:
                                {
                                alt2=1;
                                }
                                break;
                            case PLUS:
                            case MINUS:
                            case NOT:
                                {
                                alt2=1;
                                }
                                break;

                            }

                            }
                            break;
                        case SBLEFT:
                            {
                            switch ( input.LA(4) ) {
                            case LPAREN:
                                {
                                alt2=1;
                                }
                                break;
                            case PLUS:
                            case MINUS:
                            case NOT:
                                {
                                alt2=1;
                                }
                                break;
                            case SBLEFT:
                                {
                                alt2=1;
                                }
                                break;
                            case IDENTIFIER:
                                {
                                alt2=1;
                                }
                                break;
                            case STRING_LITERAL:
                                {
                                alt2=1;
                                }
                                break;
                            case INTEGER_LITERAL:
                                {
                                alt2=1;
                                }
                                break;
                            case DOUBLE:
                                {
                                alt2=1;
                                }
                                break;
                            case BOOLEAN_LITERAL:
                                {
                                alt2=1;
                                }
                                break;

                            }

                            }
                            break;
                        case IDENTIFIER:
                            {
                            switch ( input.LA(4) ) {
                            case LPAREN:
                                {
                                alt2=1;
                                }
                                break;
                            case LBRACKET:
                                {
                                alt2=1;
                                }
                                break;
                            case INCREMENT:
                            case DECREMENT:
                                {
                                alt2=1;
                                }
                                break;
                            case POWER:
                                {
                                alt2=1;
                                }
                                break;
                            case TIMES:
                            case DIV:
                            case MOD:
                                {
                                alt2=1;
                                }
                                break;
                            case PLUS:
                            case MINUS:
                                {
                                alt2=1;
                                }
                                break;
                            case GTE:
                            case EQUALS:
                            case NOT_EQUALS:
                            case GT:
                            case LT:
                            case LTE:
                                {
                                alt2=1;
                                }
                                break;
                            case AND:
                            case OR:
                                {
                                alt2=1;
                                }
                                break;
                            case COMMA:
                                {
                                alt2=1;
                                }
                                break;
                            case RPAREN:
                                {
                                alt2=1;
                                }
                                break;

                            }

                            }
                            break;
                        case STRING_LITERAL:
                            {
                            switch ( input.LA(4) ) {
                            case INCREMENT:
                            case DECREMENT:
                                {
                                alt2=1;
                                }
                                break;
                            case POWER:
                                {
                                alt2=1;
                                }
                                break;
                            case TIMES:
                            case DIV:
                            case MOD:
                                {
                                alt2=1;
                                }
                                break;
                            case PLUS:
                            case MINUS:
                                {
                                alt2=1;
                                }
                                break;
                            case GTE:
                            case EQUALS:
                            case NOT_EQUALS:
                            case GT:
                            case LT:
                            case LTE:
                                {
                                alt2=1;
                                }
                                break;
                            case AND:
                            case OR:
                                {
                                alt2=1;
                                }
                                break;
                            case COMMA:
                                {
                                alt2=1;
                                }
                                break;
                            case RPAREN:
                                {
                                alt2=1;
                                }
                                break;

                            }

                            }
                            break;
                        case INTEGER_LITERAL:
                            {
                            switch ( input.LA(4) ) {
                            case INCREMENT:
                            case DECREMENT:
                                {
                                alt2=1;
                                }
                                break;
                            case POWER:
                                {
                                alt2=1;
                                }
                                break;
                            case TIMES:
                            case DIV:
                            case MOD:
                                {
                                alt2=1;
                                }
                                break;
                            case PLUS:
                            case MINUS:
                                {
                                alt2=1;
                                }
                                break;
                            case GTE:
                            case EQUALS:
                            case NOT_EQUALS:
                            case GT:
                            case LT:
                            case LTE:
                                {
                                alt2=1;
                                }
                                break;
                            case AND:
                            case OR:
                                {
                                alt2=1;
                                }
                                break;
                            case RPAREN:
                                {
                                alt2=1;
                                }
                                break;
                            case COMMA:
                                {
                                alt2=1;
                                }
                                break;

                            }

                            }
                            break;
                        case DOUBLE:
                            {
                            switch ( input.LA(4) ) {
                            case INCREMENT:
                            case DECREMENT:
                                {
                                alt2=1;
                                }
                                break;
                            case POWER:
                                {
                                alt2=1;
                                }
                                break;
                            case TIMES:
                            case DIV:
                            case MOD:
                                {
                                alt2=1;
                                }
                                break;
                            case PLUS:
                            case MINUS:
                                {
                                alt2=1;
                                }
                                break;
                            case GTE:
                            case EQUALS:
                            case NOT_EQUALS:
                            case GT:
                            case LT:
                            case LTE:
                                {
                                alt2=1;
                                }
                                break;
                            case AND:
                            case OR:
                                {
                                alt2=1;
                                }
                                break;
                            case RPAREN:
                                {
                                alt2=1;
                                }
                                break;
                            case COMMA:
                                {
                                alt2=1;
                                }
                                break;

                            }

                            }
                            break;
                        case BOOLEAN_LITERAL:
                            {
                            switch ( input.LA(4) ) {
                            case INCREMENT:
                            case DECREMENT:
                                {
                                alt2=1;
                                }
                                break;
                            case POWER:
                                {
                                alt2=1;
                                }
                                break;
                            case TIMES:
                            case DIV:
                            case MOD:
                                {
                                alt2=1;
                                }
                                break;
                            case PLUS:
                            case MINUS:
                                {
                                alt2=1;
                                }
                                break;
                            case GTE:
                            case EQUALS:
                            case NOT_EQUALS:
                            case GT:
                            case LT:
                            case LTE:
                                {
                                alt2=1;
                                }
                                break;
                            case AND:
                            case OR:
                                {
                                alt2=1;
                                }
                                break;
                            case RPAREN:
                                {
                                alt2=1;
                                }
                                break;
                            case COMMA:
                                {
                                alt2=1;
                                }
                                break;

                            }

                            }
                            break;
                        case RPAREN:
                            {
                            int LA2_46 = input.LA(4);

                            if ( (LA2_46==SEMICOLON) ) {
                                alt2=1;
                            }


                            }
                            break;
                        case FLOAT_TYPE:
                        case STRING_TYPE:
                        case INTEGER_TYPE:
                        case BOOLEAN_TYPE:
                        case VOID_TYPE:
                        case ARRAY_TYPE:
                            {
                            int LA2_47 = input.LA(4);

                            if ( (LA2_47==RPAREN) ) {
                                alt2=1;
                            }


                            }
                            break;

                        }

                        }
                        break;
                    case BECOMES:
                    case MULTIPLY_ASSIGN:
                    case INCREMENT_ASSIGN:
                    case DECREMENT_ASSIGN:
                        {
                        alt2=1;
                        }
                        break;
                    case INCREMENT:
                        {
                        int LA2_17 = input.LA(3);

                        if ( (LA2_17==SEMICOLON) ) {
                            alt2=1;
                        }


                        }
                        break;
                    case DECREMENT:
                        {
                        int LA2_18 = input.LA(3);

                        if ( (LA2_18==SEMICOLON) ) {
                            alt2=1;
                        }


                        }
                        break;
                    case LBRACKET:
                        {
                        switch ( input.LA(3) ) {
                        case LPAREN:
                            {
                            switch ( input.LA(4) ) {
                            case LPAREN:
                                {
                                alt2=1;
                                }
                                break;
                            case PLUS:
                            case MINUS:
                            case NOT:
                                {
                                alt2=1;
                                }
                                break;
                            case SBLEFT:
                                {
                                alt2=1;
                                }
                                break;
                            case IDENTIFIER:
                                {
                                alt2=1;
                                }
                                break;
                            case STRING_LITERAL:
                                {
                                alt2=1;
                                }
                                break;
                            case INTEGER_LITERAL:
                                {
                                alt2=1;
                                }
                                break;
                            case DOUBLE:
                                {
                                alt2=1;
                                }
                                break;
                            case BOOLEAN_LITERAL:
                                {
                                alt2=1;
                                }
                                break;
                            case FLOAT_TYPE:
                            case STRING_TYPE:
                            case INTEGER_TYPE:
                            case BOOLEAN_TYPE:
                            case VOID_TYPE:
                            case ARRAY_TYPE:
                                {
                                alt2=1;
                                }
                                break;

                            }

                            }
                            break;
                        case PLUS:
                        case MINUS:
                        case NOT:
                            {
                            switch ( input.LA(4) ) {
                            case SBLEFT:
                                {
                                alt2=1;
                                }
                                break;
                            case IDENTIFIER:
                                {
                                alt2=1;
                                }
                                break;
                            case STRING_LITERAL:
                                {
                                alt2=1;
                                }
                                break;
                            case INTEGER_LITERAL:
                                {
                                alt2=1;
                                }
                                break;
                            case DOUBLE:
                                {
                                alt2=1;
                                }
                                break;
                            case BOOLEAN_LITERAL:
                                {
                                alt2=1;
                                }
                                break;
                            case LPAREN:
                                {
                                alt2=1;
                                }
                                break;
                            case PLUS:
                            case MINUS:
                            case NOT:
                                {
                                alt2=1;
                                }
                                break;

                            }

                            }
                            break;
                        case SBLEFT:
                            {
                            switch ( input.LA(4) ) {
                            case LPAREN:
                                {
                                alt2=1;
                                }
                                break;
                            case PLUS:
                            case MINUS:
                            case NOT:
                                {
                                alt2=1;
                                }
                                break;
                            case SBLEFT:
                                {
                                alt2=1;
                                }
                                break;
                            case IDENTIFIER:
                                {
                                alt2=1;
                                }
                                break;
                            case STRING_LITERAL:
                                {
                                alt2=1;
                                }
                                break;
                            case INTEGER_LITERAL:
                                {
                                alt2=1;
                                }
                                break;
                            case DOUBLE:
                                {
                                alt2=1;
                                }
                                break;
                            case BOOLEAN_LITERAL:
                                {
                                alt2=1;
                                }
                                break;

                            }

                            }
                            break;
                        case IDENTIFIER:
                            {
                            switch ( input.LA(4) ) {
                            case LPAREN:
                                {
                                alt2=1;
                                }
                                break;
                            case INCREMENT:
                            case DECREMENT:
                                {
                                alt2=1;
                                }
                                break;
                            case POWER:
                                {
                                alt2=1;
                                }
                                break;
                            case TIMES:
                            case DIV:
                            case MOD:
                                {
                                alt2=1;
                                }
                                break;
                            case PLUS:
                            case MINUS:
                                {
                                alt2=1;
                                }
                                break;
                            case GTE:
                            case EQUALS:
                            case NOT_EQUALS:
                            case GT:
                            case LT:
                            case LTE:
                                {
                                alt2=1;
                                }
                                break;
                            case AND:
                            case OR:
                                {
                                alt2=1;
                                }
                                break;
                            case RBRACKET:
                                {
                                alt2=1;
                                }
                                break;
                            case LBRACKET:
                                {
                                alt2=1;
                                }
                                break;

                            }

                            }
                            break;
                        case STRING_LITERAL:
                            {
                            switch ( input.LA(4) ) {
                            case INCREMENT:
                            case DECREMENT:
                                {
                                alt2=1;
                                }
                                break;
                            case POWER:
                                {
                                alt2=1;
                                }
                                break;
                            case TIMES:
                            case DIV:
                            case MOD:
                                {
                                alt2=1;
                                }
                                break;
                            case PLUS:
                            case MINUS:
                                {
                                alt2=1;
                                }
                                break;
                            case GTE:
                            case EQUALS:
                            case NOT_EQUALS:
                            case GT:
                            case LT:
                            case LTE:
                                {
                                alt2=1;
                                }
                                break;
                            case AND:
                            case OR:
                                {
                                alt2=1;
                                }
                                break;
                            case RBRACKET:
                                {
                                alt2=1;
                                }
                                break;

                            }

                            }
                            break;
                        case INTEGER_LITERAL:
                            {
                            switch ( input.LA(4) ) {
                            case INCREMENT:
                            case DECREMENT:
                                {
                                alt2=1;
                                }
                                break;
                            case POWER:
                                {
                                alt2=1;
                                }
                                break;
                            case TIMES:
                            case DIV:
                            case MOD:
                                {
                                alt2=1;
                                }
                                break;
                            case PLUS:
                            case MINUS:
                                {
                                alt2=1;
                                }
                                break;
                            case GTE:
                            case EQUALS:
                            case NOT_EQUALS:
                            case GT:
                            case LT:
                            case LTE:
                                {
                                alt2=1;
                                }
                                break;
                            case AND:
                            case OR:
                                {
                                alt2=1;
                                }
                                break;
                            case RBRACKET:
                                {
                                alt2=1;
                                }
                                break;

                            }
